updating the movie cards. trying to display them properly on the page

--- a/movie.html
+++ b/movie.html
@@ -19,7 +19,7 @@
             <input type="text" placeholder="Search for a Movie or TV Show" id="search-sec">
         </div>
     </header>
-    <main class="movie-container">
+    <main id="movie-container">
     </main>
     <script src="./JS/movie.js"></script>  
 </body>
